Name:               haskant
Version:            1.0
Description:        Haskell Ants AI
Author:             Thibault Duplessis
Maintainer:         github.com/ornicar
Build-Type:         Simple
Cabal-Version:      >=1.8

library
  exposed-modules:  Ants, Protocol, Search, Ai, Tore, World
  hs-source-dirs:   src .
  -- ghc-options:      -O2
  ghc-prof-options: -prof -caf-all -auto-all
  build-depends:    base >= 4,
                    containers >= 0.4,
                    array

executable MyBot
  main-is:          MyBot.hs
  -- ghc-options:      -O2
  ghc-prof-options: -prof -caf-all -auto-all
  build-depends:    base >= 4,
                    haskant

test-suite tests
  type:             exitcode-stdio-1.0
  main-is:          Test.hs
  hs-source-dirs:   tests .
  ghc-options:      -fno-warn-missing-signatures
  build-depends:    base >= 4,
                    QuickCheck >= 2.4,
                    HUnit >= 1.0,
                    test-framework >= 0.2,
                    test-framework-quickcheck2 >= 0.2,
                    test-framework-hunit >= 0.2,
                    haskant
