name:               haskant
version:            1.0
description:        Haskell Ants AI
author:             Thibault Duplessis
maintainer:         github.com/ornicar
build-type:         Simple
cabal-version:      >=1.16

library
  default-language: Haskell2010
  exposed-modules:  Ants, Protocol, Search, Ai, Tore, World, Util, SetQueue
  hs-source-dirs:   src .
  ghc-options:      -O2 -Wall -fno-warn-type-defaults -fno-warn-missing-signatures
  ghc-prof-options: -prof -caf-all -auto-all
  build-depends:    base, containers, array

executable MyBot
  default-language: Haskell2010
  main-is:          MyBot.hs
  ghc-options:      -O2 -Wall
  ghc-prof-options: -prof -caf-all -auto-all
  build-depends:    base, haskant

test-suite tests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  hs-source-dirs:   tests
  ghc-options:      -fno-warn-missing-signatures
  build-depends:    base, 
                    QuickCheck, 
                    HUnit, 
                    test-framework, 
                    test-framework-quickcheck2, 
                    test-framework-hunit, 
                    haskant
